--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -37,8 +37,8 @@
     <color name="chips_background">#FF000000</color>
 
     <color name="scoreboard_text">#FFFFFF</color>
-    <color name="led_red">#FF1A1A</color>
-    <color name="led_red_glow">#D50000</color>
+    <color name="led_red">#FF1F18</color>
+    <color name="led_red_glow">#C10000</color>
     <color name="led_green">#00EF18</color>
     <color name="led_green_glow">#00A511</color>
     <color name="led_blue">#1BB8FF</color>
